--- a/css/styles.css
+++ b/css/styles.css
@@ -252,3 +252,76 @@ p {
     left: 51%;
   }
 }
+
+/* Footer Section */
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 1.4rem;
+}
+
+.footer__logo {
+  grid-column: 1 / 4;
+}
+
+.footer__icons {
+  grid-column: 1 / 4;
+  display: flex;
+  gap: 2rem;
+}
+
+.footer__text {
+  grid-column: 1 / 4;
+}
+
+.footer__text .site {
+  font-weight: 700;
+}
+
+.footer__icon {
+  transition: fill 0.3s ease-in-out;
+}
+
+.footer__icon:hover {
+  fill: var(--color-yellow);
+}
+
+@media screen and (min-width: 720px) {
+  .footer__logo {
+    grid-column: 1 / 3;
+  }
+  
+  .footer__text {
+    grid-column: 1 / 3;
+  }
+
+  .footer__icons {
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .footer__logo {
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+  }
+  
+  .footer__text {
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+  }
+
+  .footer .reach-out {
+    width: 50ch;
+  }
+
+  .footer__icons {
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    justify-content: center;
+    align-items: center;
+  }
+}
