add background images to the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,10 @@ p {
     position: relative;
     padding-top: 6rem;
     margin-bottom: 18rem;
+    background: url(/assets/images/bg-pattern-1.svg);
+    background-repeat: no-repeat;
+    background-position-x: 110%;
+    background-position-y: -13%;
   }
 
   .hero__title {
@@ -230,6 +234,11 @@ p {
 }
 
 @media screen and (min-width: 1120px) {
+  .hero {
+    background-position-x: 101%;
+    background-position-y: -4%;
+  }
+
   .hero__title {
     width: 20ch;
   }
@@ -325,5 +334,22 @@ p {
     grid-row: 1 / 4;
     justify-content: center;
     align-items: center;
+  }
+}
+
+/* Utils */
+.bg {
+  background: url(/assets/images/bg-main-mobile.png);
+}
+
+@media screen and (min-width: 720px) {
+  .bg {
+    background-image: url(/assets/images/bg-main-tablet.png);
+  }
+}
+
+@media screen and (min-width: 1120px) {
+  .bg {
+    background-image: url(/assets/images/bg-main-desktop.png);
   }
 }
